--- a/03-task-manager/starter/package.json
+++ b/03-task-manager/starter/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
