--- a/04-store-api/starter/package.json
+++ b/04-store-api/starter/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jobs",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
@@ -10,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "description": ""
 }
